<resources>

    <!-- Event Label -->
    <string name="title_label">Texto 1</string>
    <string name="price_label">R$ 00,00</string>
    <string name="date_label">01/01/2001 00:00</string>
    <string name="desc_label">Texto 2</string>

    <!-- App -->
    <string name="app_name">Events</string>
    <string name="att_google_play">Por favor, atualize o Google Play Services.</string>

    <!-- Bottom Sheet Check-in -->
    <string name="check_in_title">Faça o Check-in!</string>
    <string name="name_title">Nome</string>
    <string name="name_hint">Digite seu nome</string>
    <string name="email_title">E-mail</string>
    <string name="email_hint">Digite seu email para contato</string>
    <string name="button_send_title">Enviar</string>

    <!-- EventDetailsActivity -->
    <string name="check_in_sent_message">Check-in realizado com sucesso.</string>
    <string name="check_in_error_message">Erro ao efetuar o envio.</string>
    <string name="check_email_error_message">E-mail digitado incorretamente.</string>

</resources>