<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/check_in_title"
        android:textAlignment="center"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name_title"
        android:textColor="@color/teal_700"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/name_send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/name_hint"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_title"
        android:textColor="@color/teal_700"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/email_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/email_hint"
        android:layout_marginLeft="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/button_send_title"
        android:backgroundTint="@color/teal_700"
        android:layout_marginRight="20dp"/>

    </RelativeLayout>

</LinearLayout>