<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_fragment_height"
    android:layout_marginTop = "@dimen/low_margin"
    android:layout_marginLeft="@dimen/low_margin"
    android:layout_marginRight="@dimen/low_margin"
    app:cardCornerRadius="@dimen/corner_radius_size"
    app:cardElevation="@dimen/elevation_size"
    app:cardMaxElevation="@dimen/max_elevation_size"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:transitionName="expand_transition"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_cardview_height"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDarkSemiTransparent"
            android:alpha="0.8">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/low_margin"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:text="@string/title_label"/>

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/low_margin"
                android:textColor="#FFFFFF"
                android:text="@string/date_label" />

            <TextView
                android:id="@+id/event_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:textColor="#FFFFFF"
                android:padding="@dimen/low_margin"
                android:text="@string/price_label" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>